--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.11",
         "gapi-script": "^1.2.0",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-router-dom": "^6.2.1",
+        "react": "^17.0.0",
+        "react-dom": "^17.0.2",
+        "react-google-login": "^5.2.2",
+        "react-router-dom": "^6.11.1",
         "react-scripts": "5.0.1",
         "web-vitals": "^2.1.4"
     },
